
  From Gottfried Ganssauge:

  - Fix SCons on SuSE/AMD-64 Linux by having the wrapper script also
    check for the build engine in the parent directory of the Python
    library directory (/usr/lib64 instead of /usr/lib).

  From Ralph W. Grosse-Kunstleve and Patrick Mezard:

  - Remove unneceesary (and incorrect) SCons.Util strings on some function
    calls in SCons.Util.

  From Stephen Kennedy:

  - Speed up writing the .sconsign file at the end of a run by only
    calling sync() once at the end, not after every entry.

  From Steven Knight:

  - When compiling with Microsoft Visual Studio, don't include the ATL and
    MFC directories in the default INCLUDE and LIB environment variables.

  - Remove the following deprecated features:  the ParseConfig()
    global function (deprecated in 0.93); the misspelled "validater"
    keyword to the Options.Add() method (deprecated in 0.91); the
    SetBuildSignatureType(), SetContentSignatureType(), SetJobs() and
    GetJobs() global functions (deprecated in 0.14).

  - Fix problems with corrupting the .sconsign.dblite file when
    interrupting builds by writing to a temporary file and renaming,
    not writing the file directly.

  - Fix a 0.96 regression where when running with -k, targets built from
    walking dependencies later on the command line would not realize
    that a dependency had failed an earlier build attempt, and would
    try to rebuild the dependent targets.

  - Change the final messages when using -k and errors occur from
    "{building,cleaning} terminated because of errors" to "done
    {building,cleaning} targets (errors occurred during {build,clean})."

  - Allow Configure.CheckFunc() to take an optional header argument
    (already supported by Conftest.py) to specify text at the top of
    the compiled test file.

  - Fix the --debug=explain output when a Python function action changed
    so it prints a meaningful string, not the binary representation of
    the function contents.
